Restructure Banner Components. Implement UI layout for Banner search

--- a/app/styles/carousel.scss
+++ b/app/styles/carousel.scss
@@ -1,14 +1,20 @@
-.app__banner {
+.carousel {
   margin: 0;
-  position: absolute;
-  top:0;
-  left: 0;
-  right: 0;
+  position: relative;
 
   .slide__container {
     position: relative;
     height: 30em;
     width: 100%;
+
+    .slide__overlay {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 0;
+      background-color: rgba(0, 0, 0, 0.4);
+    }
 
     .slide {
       position: absolute;
@@ -23,20 +29,30 @@
         opacity: 1;
         transition: opacity 0.8s ease-in;
       }
+
+      .banner__widget {
+        position: absolute;
+        right: 1em;
+        bottom: 1em;
+      }
     }
   }
 
   .toggle {
     display: inline-block;
-
+    cursor: pointer;
     position: absolute;
     top: 48%;
     padding: 5px;
-    background-color: rgba(255, 255, 255, 0.3);
+    background-color: rgba(255, 255, 255, 0.5);
     border-radius: 50%;
     z-index: 10;
     height: 30px;
     width: 30px;
+
+    &:hover {
+      background-color: rgba(255, 255, 255, 0.8);
+    }
 
     &.toggle__prev {
       left: 1.3em;
