--- a/app/styles/actor_card.scss
+++ b/app/styles/actor_card.scss
@@ -1,8 +1,8 @@
 .component__actor__card {
 	display: inline-block;
 	border-color: #333;
-  margin: 5px;
   font-size: 13px;
+  cursor: pointer;
 
   .user__image__wrap {
     display: inline-block;
