--- a/app/styles/banner_search.scss
+++ b/app/styles/banner_search.scss
@@ -19,6 +19,7 @@
       border-top-left-radius: 4px;
       border-bottom-left-radius: 4px;
       background-color: #fff;
+      margin-right: 0;
 
       * {
         vertical-align: middle;
@@ -28,20 +29,21 @@
         border: 1px solid #ff6166;
       }
 
-      margin-right: 0;
       .logo {
-        width: 5%;
+        width: 7%;
         margin: 0;
-        background-color: #dcdede;
         height: 3em;
         border-top-left-radius: 4px;
         border-bottom-left-radius: 4px;
+        text-align: center;
+        
+        .icon { height: 3em; }
       }
 
       .search__text {
         margin: 0;
         padding: 0 8px;
-        width: 95%;
+        width: 93%;
         line-height: 2em;
         outline: none;
         border: none;
@@ -58,7 +60,6 @@
       border-bottom-left-radius: 0;
       vertical-align: top;
       font-size: 16px;
-
     }
   }
 }
