T-009 Upgrade to webpack 2.x and update config files to match new requirements Enhance Comment list UI Complete Listing for Comments Commence implementation of Leaflet.js for map-view

--- a/app/styles/comment.scss
+++ b/app/styles/comment.scss
@@ -16,10 +16,10 @@
       border: 1px solid #ccc;
       vertical-align: middle;
       margin-right: 5px;
-      overflow: hidden;
 
       .image {
         width: 2em;
+        border-radius: 50%;
       }
     }
 
