--- a/app/styles/feed_item.scss
+++ b/app/styles/feed_item.scss
@@ -1,8 +1,3 @@
-.component__feed__item {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  background-color: #fff;
+.component__feed_item {
+  margin: 0;
 }
