--- a/app/styles/event_detail_header.scss
+++ b/app/styles/event_detail_header.scss
@@ -1,7 +1,8 @@
 .component__eventdetail__header {
   width: 100%;
-  height: 12em;
+  height: 18em;
   background-color: #ccc;
+  padding-top: 5em;
 
   .container__wrap {
     padding: 2em 5em;
