--- a/app/styles/comment_input.scss
+++ b/app/styles/comment_input.scss
@@ -1,12 +1,13 @@
 .component__comment__input {
   min-height: 4em;
-  padding: 10px 10px;
-  border-top: 1px solid #dcdede;
+  padding: 15px 15px;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  margin-bottom: 10px;
 
   .header__wrap {
     border-bottom: 1px solid #f1f1f1;
-    padding: 10px 0;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
   }
   .actor__avatar__wrap, .actor__avatar {
     width: 2em;
