--- a/app/styles/comment_item.scss
+++ b/app/styles/comment_item.scss
@@ -1,7 +1,4 @@
 .component__comment__item {
-  border-top: 1px solid #dcdede;
-  margin-top: .5em;
-
   .comment__wrap {
     position: relative;
     display: flex;
@@ -26,6 +23,8 @@
     .text__wrap {
       display: inline-block;
       width: 100%;
+      border-bottom: 1px solid #dcdede;
+      padding-bottom: .9em;
     }
   }
 }
