--- a/app/styles/home.scss
+++ b/app/styles/home.scss
@@ -20,5 +20,7 @@
 .feed__container {
   position: relative;
   text-align: center;
-  padding: 1.5em 3% 0 3%;
+  padding-top: 35px;
+  width: 1080px;
+  margin: 1em auto;
 }
