--- a/app/styles/welcome_page_container.scss
+++ b/app/styles/welcome_page_container.scss
@@ -17,9 +17,8 @@
   }
 }
 
-.feed__container {
+.container__welcomepage {
   position: relative;
-  text-align: center;
   padding-top: 35px;
   width: 1080px;
   margin: 1em auto;
