--- a/app/styles/event_card.scss
+++ b/app/styles/event_card.scss
@@ -45,11 +45,11 @@
 		opacity: 1
 	}
   .item__main {
-    padding: 5px 0;
     padding-bottom: 0;
     margin: 0;
 
     .item__metadata {
+			font-family: 'opens_sanslight', 'sans-serif';
       margin-bottom: 3px;
       font-size: 11px;
       display: inline-block;
