--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -1,6 +1,29 @@
+@font-face {
+  font-family: 'open_sans';
+  src: url('/fonts/OpenSans-Regular-webfont.eot');
+  src: url('/fonts/OpenSans-Regular-webfont.ttf'),
+        url('/fonts/OpenSans-Regular-webfont.weff'),
+        url('/fonts/OpenSans-Regular-webfont.svg');
+}
+
+@font-face {
+    font-family: 'open_sanslight';
+    src: url('/fonts/OpenSans-Light-webfont.eot');
+    src: url('/fonts/OpenSans-Light-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/fonts/OpenSans-Light-webfont.woff') format('woff'),
+         url('/fonts/OpenSans-Light-webfont.ttf') format('truetype'),
+         url('/fonts/OpenSans-Light-webfont.svg#open_sanslight') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
   padding: 0;
   margin: 0;
+
+  * {
+    font-family: 'open_sans', 'sans-serif';
+  }
 }
 
 
