--- a/app/styles/banner_search.scss
+++ b/app/styles/banner_search.scss
@@ -1,13 +1,14 @@
 .bannersearch {
-  position: absolute;
-  top: 18em;
+  display: inline-block;
+  margin: 0 auto;
+  width: 1080px;
+  padding: 25px 60px;
+  margin-top: -90px;
+  margin-bottom: 50px;
+  background-color: #fff;
   border-top-left-radius: 4px;
   border-top-right-radius: 4px;
-  margin: 0 auto;
-  left: 12.5%;
-  right: 12.5%;
-  padding: 25px;
-  background-color: rgba(255, 255, 255, 0.97);
+  background-color: rgba(255, 255, 255, 0.99);
   box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
   z-index: 50;
 
@@ -17,7 +18,6 @@
     color: #ff5a5f;
     font-family: 'open_sanslight', 'sans-serif';
     margin-bottom: .25em;
-
   }
   .search__wrap {
     width: 100%;
