--- a/app/styles/welcome_page_container.scss
+++ b/app/styles/welcome_page_container.scss
@@ -6,6 +6,7 @@
 
 .banner__section {
   position: relative;
+  text-align: center;
 }
 
 .feed__section {
@@ -19,7 +20,6 @@
 
 .container__welcomepage {
   position: relative;
-  padding-top: 65px;
   width: 1080px;
   margin: 1em auto;
 }
