T-020 ::: Modularize TextSearch Component - Decouple from BannerSearch Rename BannerSearch Component to Banner Reuse TextSearch component in Index Header when in scrolled-up state Reuse TextSearch component in DefaultLayout's header Enhance  scroll interaction for BoardCategory component

--- a/app/styles/event_detail_body.scss
+++ b/app/styles/event_detail_body.scss
@@ -6,6 +6,7 @@
   .event__detail__wrap {
     display: flex;
     justify-content: space-between;
+    min-height: 550px;
 
     .event_detail__sidebar {
       display: inline-block;
