--- a/app/styles/board_category.scss
+++ b/app/styles/board_category.scss
@@ -10,22 +10,22 @@
   .data__container__wrap {
     width: 100%;
     height: 100%;
-    width: 100%;
-    overflow: hidden;
     position: relative;
 
     .scroll__control {
       display: inline-block;
-      height: 50px;
-      width: 14px;
-      background-color: rgba(0, 0, 0, 0.5);
+      width: 25px;
       position: absolute;
       top: 46%;
       z-index: 15;
       cursor: pointer;
 
-      &.left { left: 1px; }
-      &.right { right: 1px; }
+      &.left { left: -30px; }
+      &.right { right: -30px; }
+
+      .icon {
+        vertical-align: middle;
+      }
     }
 
     &.has__content {
@@ -39,12 +39,12 @@
     position: relative;
     width: 1080px;
     overflow-x: hidden;
+    white-space: nowrap;
   }
 
   .content__wrap {
     position: relative;
-    height: 400px;
     display: block;
-    white-space: nowrap;
+    transition: transform 0.3s ease-in;
   }
 }
