--- a/app/styles/text_search.scss
+++ b/app/styles/text_search.scss
@@ -1,29 +1,9 @@
-.bannersearch {
-  display: inline-block;
-  margin: 0 auto;
-  width: 1080px;
-  padding: 13px 60px;
-  margin-top: -90px;
-  margin-bottom: 30px;
-  background-color: #fff;
-  border-top-left-radius: 4px;
-  border-top-right-radius: 4px;
-  background-color: rgba(255, 255, 255, 0.99);
-  box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.25);
-  z-index: 50;
-
-  .search__trigger_text {
-    text-align: left;
-    font-size: 2.5em;
-    color: #ff5a5f;
-    font-family: 'open_sanslight', 'sans-serif';
-    margin-bottom: .25em;
-  }
+.component__textsearch {
   .search__wrap {
     width: 100%;
     position: relative;
     border: 1px solid #eaeaea;
-    margin-bottom: .5em;
+    margin-bottom: .7em;
 
     .search__input {
       width: 85%;
@@ -59,7 +39,7 @@
         line-height: 2em;
         outline: none;
         border: none;
-        font-size: 20px;
+        font-size: 15px;
         color: #2b2b2b;
       }
     }
