--- a/app/styles/event_detail_body.scss
+++ b/app/styles/event_detail_body.scss
@@ -6,11 +6,11 @@
   .event__detail__wrap {
     display: flex;
     justify-content: space-between;
-    min-height: 550px;
+    min-height: 850px;
 
     .event_detail__sidebar {
       display: inline-block;
-      width: 20%;
+      width: 19%;
       background-color: #f6f6f6;
     }
 
@@ -19,7 +19,11 @@
       padding: 2em 0;
       border-left: 1px solid #dadada;
       border-right: 1px solid #dadada;
-      width: 40%;
+      width: 41%;
+      margin-top: -60px;
+      background-color: #fff;
+      border-top-left-radius: 5px;
+      border-top-right-radius: 5px;
     }
 
     .map__section {
