--- a/app/styles/header.scss
+++ b/app/styles/header.scss
@@ -5,7 +5,7 @@
   z-index: 100;
   position: fixed;
   width: 100%;
-  height: 3.5em;
+  height: 4em;
   color: #fff;
   transition: background-color .3s ease-in;
 
@@ -90,16 +90,19 @@
 
       .actions {
         display: inline-block;
-
-        .header__profile {
-          display: inline-block;
-        }
+        vertical-align: bottom;
 
         .tilte__action_link {
           margin-right: 1em;
           font-size: 16px;
           padding: 6px 19px;
         }
+      }
+
+      .component__header__profile {
+        padding-top: 3px;
+        display: inline-block;
+        vertical-align: bottom;
       }
     }
 
