--- a/app/styles/banner.scss
+++ b/app/styles/banner.scss
@@ -15,7 +15,7 @@
     text-align: left;
     font-size: 2.5em;
     color: #ff5a5f;
-    font-family: 'open_sanslight', 'sans-serif';
+    font-family: 'open-sanslight', 'sans-serif';
     margin-bottom: .25em;
   }
 }
