TF-013 implement event registration. Implement follow/unfollow feature. Implement User stats form event detail page.

--- a/app/styles/attendance.scss
+++ b/app/styles/attendance.scss
@@ -1,5 +1,4 @@
-.component__event__description {
-  margin-bottom: 4em;
+.component__attendance {
   font-family: 'open-sans-light', 'sans-serif';
   color: #444;
 }
