--- a/app/styles/event_detail_body.scss
+++ b/app/styles/event_detail_body.scss
@@ -39,6 +39,7 @@
 
           .event__action__wrap {
             width: auto;
+            padding-top: 55px;
           }
 
           .event__date__wrap {
@@ -105,7 +106,7 @@
         .section__wrap {
           margin-bottom: 3em;
         }
-        
+
         .section__header {
           padding-bottom: 5px;
           border-bottom: 1px solid #dcdede;
