--- a/app/styles/event_organizer.scss
+++ b/app/styles/event_organizer.scss
@@ -9,7 +9,8 @@
 
   .left__section {
     width: 18%;
-
+    margin-top: 10px;
+    
     .organizer__avatar__wrap {
       border-radius: 50%;
       border: 1px solid #dcdede;
@@ -36,5 +37,11 @@
         display: block;
       }
     }
+  }
+
+  .organizer__meta__data {
+    border-top: 1px solid #dcdede;
+    margin-top: 5px;
+    padding-top: 5px;
   }
 }
