--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -20,6 +20,18 @@
 }
 
 
+@font-face {
+    font-family: 'open-sans-bold';
+    src: url('/lib/fonts/OpenSans-Semibold-webfont.eot');
+    src: url('/lib/fonts/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/lib/fonts/OpenSans-Semibold-webfont.woff') format('woff'),
+         url('/lib/fonts/OpenSans-Semibold-webfont.ttf') format('truetype'),
+         url('/lib/fonts/OpenSans-Semibold-webfont.svg#open-sanslight.svg') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+
+
 body {
   padding: 0;
   margin: 0;
@@ -57,12 +69,7 @@ body {
   border: 1px solid transparent;
   border-radius: 4px;
   text-decoration: none;
-}
-
-.btn-primary {
-  background-color: #ff5a5f;
-  border-color: #ff5a5f ;
-  color: #fff;
+  outline: none;
 }
 
 .inline__block {
@@ -97,6 +104,7 @@ body {
 .btn-group > .btn.active,
 .btn-group-vertical > .btn.active {
   z-index: 2;
+  outline: none;
 }
 .btn-group .btn + .btn,
 .btn-group .btn + .btn-group,
@@ -266,11 +274,30 @@ body {
   color: #fff;
 }
 
+.btn-confirmed {
+  border-color: #338e57;
+  background-color: #fff;
+  color: #338e57 !important;
+}
+
+.btn-primary-bordered {
+  background-color: #fff;
+  border-color: #ff5a5f;
+  color: #ff5a5f;
+}
+
 .btn-primary:hover {
   border-color: #ed6165;
   background-color: #ed6165;
 }
-btn-medium {
+
+.btn-primary-bordered:hover {
+  border-color: #bf5659;
+  color: #bf5659;
+  font-weight: bold;
+}
+
+.btn-medium {
 
 }
 
