--- a/app/styles/text_search.scss
+++ b/app/styles/text_search.scss
@@ -36,11 +36,11 @@
         margin: 0;
         padding: 0 8px;
         width: 93%;
-        line-height: 2em;
+        line-height: 3em;
         outline: none;
         border: none;
-        font-size: 15px;
-        color: #2b2b2b;
+        font-size: 16px;
+        color: #555;
       }
     }
 
