TF-013 - Complete user follow-actions' implementation Improve logic event registration logic. Improve code resposible for rendering event organizer card. Implement Attendee list

--- a/app/styles/attendee.scss
+++ b/app/styles/attendee.scss
@@ -1,13 +1,19 @@
 .component__attendee {
   display: inline-block;
-  
+  cursor: pointer;
+
   .attendee__wrap {
     width: 4em;
     height: 4em;
     border-radius: 50%;
     overflow: hidden;
+    border: 2px solid #fff;
 
-    .avatar: {
+    &:hover {
+      border-color: #dcdede;
+    }
+
+    .avatar {
       width: 4em;
       height: 4em;
     }
