--- a/app/styles/event_detail_body.scss
+++ b/app/styles/event_detail_body.scss
@@ -113,6 +113,7 @@
           margin-bottom: 10px;
           font-weight: bold;
           font-size: 1.2em;
+          font-family: 'open-sans-light', 'sans-serif';
         }
       }
     }
