--- a/app/styles/attendance.scss
+++ b/app/styles/attendance.scss
@@ -1,4 +1,10 @@
 .component__attendance {
   font-family: 'open-sans-light', 'sans-serif';
   color: #444;
+  padding-top: 10px;
+
+  .attendee__list {
+    display: inline-flex;
+    justify-content: space-between;
+  }
 }
