--- a/app/styles/follow_action.scss
+++ b/app/styles/follow_action.scss
@@ -1,7 +1,12 @@
 .component__follow__action {
+  width:  100px;
+
+  .icon__wrap {
+    margin-right: 5px;
+  }
+
   .action__text {
     font-size: 14px;
     vertical-align: middle;
-    margin-left: 5px;
   }
 }
