--- a/app/styles/event_detail_header.scss
+++ b/app/styles/event_detail_header.scss
@@ -1,15 +1,32 @@
 .component__eventdetail__header {
   width: 100%;
-  height: 20em;
+  height: 27em;
   background-color: #ccc;
   padding-top: 5em;
+  position: relative;
+  transition: height 0.3s ease-in;
 
-  .container__wrap {
-    padding: 2em 5em;
+  .control__wrap {
+    height: 4em;
     display: flex;
     justify-content: space-between;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 19%;
+    padding-left: 5px;
 
-    .event__information__wrap {
+    .control {
+      display: inline-block;
+      margin-left: 15px;
+      cursor: pointer;
+    }
+
+    .toggle__banner__control {
+
+    }
+
+    .share__control {
 
     }
 
