--- a/app/styles/event_detail_header.scss
+++ b/app/styles/event_detail_header.scss
@@ -7,14 +7,12 @@
   transition: height 0.3s ease-in;
 
   .control__wrap {
-    height: 4em;
     display: flex;
     justify-content: space-between;
     position: absolute;
-    left: 0;
+    right: 0;
     bottom: 0;
-    width: 19%;
-    padding-left: 5px;
+    padding: 10px;
 
     .control {
       display: inline-block;
