--- a/app/styles/layout.scss
+++ b/app/styles/layout.scss
@@ -36,7 +36,7 @@ body {
   padding: 0;
   margin: 0;
   color: #444;
-  font-family: 'open-sans', 'sans-serif';
+  font-family: 'open-sans', 'sans-serif' !important;
 }
 
 
@@ -70,6 +70,11 @@ body {
   border-radius: 4px;
   text-decoration: none;
   outline: none;
+}
+
+.app__root.active__modal {
+  // position: fixed;
+  overflow-y: hidden;
 }
 
 .inline__block {
